# fastapi-sentry

./: alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 9af841d9e1df_update_post_table_foreignkey_option_.py  bbfcaf89abb9_create_post_table.py  bec0da5b22df_create_user_table.py
src/: main.py
src/api/: __init__.py  user.py
src/core/: __init__.py  config.py
src/crud/: __init__.py  base.py  user.py
src/database/: __init__.py  base.py  session.py
src/middleware/: __init__.py  monitoring.py
src/model/: __init__.py  post.py  user.py
src/schema/: __init__.py
src/schema/user/: __init__.py  crud.py
